<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="geoQuiz">GeoQuiz!</string>
    <string name="flag">Flags</string>
    <string name="capitals">Capitals</string>
    <string name="capitalImgViewDescription">Image of Capitol</string>
    <string name="flagWaveDescription">Image of person waving flag</string>
    <string name="landmarkDescription">Landmark Image View Description</string>
    <string name="Landmarks">Landmarks</string>
    <string name="lets_quiz_flags">Let\'s Quiz!</string>
    <string name="lets_quiz_capitals">Let\'s Quiz!</string>
    <string name="lets_quiz_landmarks">Let\'s Quiz!</string>
    <string name="startCompletion">0%</string>
    <string name="getName">What\'s your name?</string>
    <string name="nameHint">Enter Your Name</string>
    <string name="start">Start</string>
    <string name="title_login_button_description">For navigating to Dashboard after logging in</string>
    <string name="title_signup_button_description">For navigating to Dashboard after signing up</string>
    <string name="Logo">Logo</string>
    <string name="flag_question">This Flag Belongs to which country?</string>
    <string name="flagimage_for_question">The flag image used for the question</string>
    <string name="country_placeholder">Country Name</string>
    <string name="submit">Submit</string>
    <string name="qNumberStart">1</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="capital_name_placeholder">London</string>
    <string name="capital_question_text">is the capital of which country?</string>
    <string name="try_again">Try Again</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="result_text">Your score was .....</string>
    <string name="result_word">Congratulations</string>
    <string name="result_image_description">An image depicting the success or failure of result</string>
    <string name="iv_quiz_type_placeholder">Capital</string>
    <string name="iv_diff_chosen_placeholder">Medium</string>
    <string name="landmark_name_placeholder">The Eiffel Tower</string>
    <string name="landmark_question_text">In which country is the following landmark found?</string>
    <string name="image_landmark_description">The landmark image associated with the question</string>
    <string name="name_the_country">Name The Country!</string>
    <string name="Food">Foods</string>
    <string name="Sports">Sports</string>
    <string name="Brands">Brands</string>
    <string name="this_food_belongs_to_the_cuisine_of_which_nation">This Food belongs to the cuisine of which nation?</string>
    <string name="foooooooooooood">FOOOOOOOOOOOOOD</string>
    <string name="the_following_brand_comes_from_which_country">The following brand comes from which country?</string>
    <string name="braaaaaaands">Braaaaaaands</string>
    <string name="the_following_sports_team_is_based_in_which_nation">The following Sports Team is based in which nation?</string>
    <string name="sports">SPORTS!</string>
    <string name="next">- NEXT -</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_username">Enter Your Username.</string>
    <string name="choose_a_username">Choose a Username.</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="choose_your_password">Choose Your Password</string>
    <string name="very_hard">Very Hard</string>
    <string name="impossible">Impossible</string>
    <string name="join">Join!</string>
    <string name="enter">Enter!</string>
    <string name="logout">Logout</string>
</resources>