<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".Results">


    <TextView
        android:id="@+id/tvQuizType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/iv_quiz_type_placeholder"
        android:textColor="@color/secondaryColourText"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutImage"
        app:layout_constraintEnd_toStartOf="@id/tvDifficultyChosen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDifficultyChosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/iv_diff_chosen_placeholder"
        android:textColor="@color/secondaryColourText"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvQuizType"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/primaryDark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvDifficultyChosen"
        app:layout_constraintBottom_toTopOf="@id/tvResultWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/result_image_description"
            tools:srcCompat="@drawable/outstanding" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvResultWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_word"
        android:textColor="@color/secondaryColourText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutImage"
        app:layout_constraintBottom_toTopOf="@id/tvResultText"/>

    <TextView
        android:id="@+id/tvResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textColor="@color/secondaryColourText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultWord"
        app:layout_constraintBottom_toTopOf="@id/tvResultPercentage"/>

    <TextView
        android:id="@+id/tvResultPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startCompletion"
        android:textColor="@color/secondaryColourText"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultText"
        app:layout_constraintBottom_toTopOf="@id/btnDashboard"/>

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDashboard"
        app:layout_constraintTop_toBottomOf="@+id/tvResultPercentage" />

    <Button
        android:id="@+id/btnDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultPercentage"
        app:layout_constraintStart_toEndOf="@id/btnTryAgain"
        app:layout_constraintEnd_toStartOf="@id/btnHome"
        tools:layout_editor_absoluteX="160dp" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDashboard"
        app:layout_constraintTop_toBottomOf="@+id/tvResultPercentage" />

</androidx.constraintlayout.widget.ConstraintLayout>