<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/geoQuiz"
        android:textColor="#5D4037"
        android:textSize="66sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/flagCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="80dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/ivFlag"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:clickable="true"
            android:contentDescription="@string/flagWaveDescription"
            android:focusable="true"
            android:src="@drawable/flagwave" />

        <TextView
            android:id="@+id/tvFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/flag"
            android:textAlignment="center"
            android:textColor="#5D4037"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/capitalCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="80dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagCV">

        <ImageView
            android:id="@+id/ivCapital"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:clickable="true"
            android:contentDescription="@string/capitalImgViewDescription"
            android:focusable="true"
            android:src="@drawable/capitol"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/capitals"
            android:textAlignment="center"
            android:textColor="#5D4037"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/landmarkCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="80dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capitalCV">

        <ImageView
            android:id="@+id/ivLandmark"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:clickable="true"
            android:contentDescription="@string/landmarkDescription"
            android:focusable="true"
            android:src="@drawable/mt_fuji"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvLandmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Landmarks"
            android:textAlignment="center"
            android:textColor="#5D4037"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>