<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".LandmarkQuiz">

    <TextView
        android:id="@+id/tvFoodQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_food_belongs_to_the_cuisine_of_which_nation"
        android:textStyle="bold"
        android:textColor="@color/primaryColourText"
        android:textSize="24sp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/ivFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivFood"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/image_landmark_description"
        app:srcCompat="@drawable/eiffel_tower"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@id/tvFoodName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodQuestion" />

    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foooooooooooood"
        android:textStyle="bold"
        android:textColor="@color/primaryColourText"
        android:textSize="30sp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/groupFood1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFood" />

    <LinearLayout
        android:id="@+id/groupFood1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFoodName"
        app:layout_constraintBottom_toTopOf="@id/groupFood2"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbFood1"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/country_placeholder"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbFood2"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/country_placeholder"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupFood2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupFood1"
        app:layout_constraintBottom_toTopOf="@id/groupFood3">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbFood3"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/country_placeholder"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbFood4"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/country_placeholder"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupFood3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupFood2"
        app:layout_constraintBottom_toTopOf="@id/submitBtnFood">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbFood5"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/country_placeholder"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbFood6"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/country_placeholder"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <Button
        android:id="@+id/submitBtnFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="onSubmitClicked"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupFood3"
        app:layout_constraintStart_toEndOf="@id/tvCounterFood"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCounterFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qNumberStart"
        android:textSize="26sp"
        android:textColor="@color/primaryColourText"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submitBtnFood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupFood3" />


</androidx.constraintlayout.widget.ConstraintLayout>